# hawk-hooks

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  gemini-skill-updated.md  pyproject.toml
builtins/: hawk-package.yaml
builtins/agents/: security-auditor.md
builtins/commands/: codex.md  commit.md  gemini.md  prime-git.md
builtins/hooks/: completion-check.md  completion-validator-cli.py  confidence-checker-cli.py  context-primer.md  dangerous-cmd.sh  docs-update.sh  file-guard.py  git-commit-guide.sh  loop-detector-cli.py  notify-permission.py  notify-stop.py  python-format.py  python-lint.py  scope-creep-detector-cli.py  shell-lint.sh
builtins/prompts/: cleanup-claude-sessions.md  code-audit.md  prime-context.md  retrospective.md  write-agents-md.md
docs/: CHANGELOG.md  DEPRECATE.md  MIGRATION-v3-prompts.md  TODO-package-scoped-registry.md  adapter-capability-verification-2026-02-23.md  demo.cast  hawk-v2-research-and-design.md
docs/plans/: 2026-01-06-add-hook-feature.md  2026-01-06-add-hook-implementation.md  2026-01-06-auto-discovery-design.md  2026-01-06-captain-hook-design.md  2026-01-06-cli-redesign.md  2026-01-07-rich-live-menu-design.md  2026-01-07-rich-live-menu-implementation.md  2026-01-09-code-quality-improvements.md  2026-01-11-prompts-integration-design.md  2026-01-12-prompts-integration-implementation.md  2026-01-13-diagram-commands-design.md  2026-02-18-hawk-hook-format-design.md  2026-02-18-owl-afk-v2-integration-design.md  2026-02-18-package-grouping-design.md  2026-02-21-prompts-canonical-schema-v3-plan.md  2026-02-21-v2-completion-plan.md  2026-02-22-autosync-ux-design.md  2026-02-22-autosync-ux-plan.md  2026-02-23-claude-mcp-scope-fix-plan.md  2026-02-23-cursor-antigravity-adapter-parity-plan.md  2026-02-23-search-provider-plugin-system-plan.md  2026-02-23-tui-packages-registry-unification-plan.md  2026-02-23-v2-architecture-refactor-plan.md  2026-02-24-hawk-mcp-tool-design.md  2026-02-24-phase5-architecture-refactor-plan.md  2026-02-24-v2-code-review-fixes-plan.md  DONE-2026-02-17-v2-tui-design.md  DONE-2026-02-18-hawk-hook-format-plan.md  DONE-2026-02-21-phase-b-package-lifecycle-design.md  DONE-2026-02-21-prompts-canonical-schema-v3-plan.md  DONE-2026-02-21-v2-completion-plan.md  DONE-2026-02-22-autosync-ux-plan.md  DONE-2026-02-24-phase5-architecture-refactor-plan.md  hooks-research.md
examples/agents/: code-reviewer.md  docs-writer.md  refactor-assistant.md  test-generator.md
examples/prompts/: claude.md  codex.md  commit.md  diagram-render.md  diagram-spec.md  dodo-command.md  gemini.md  handoff-for-clear-context.md  init-ui-stack.md  post-work-review.md  prime-context-from-claude.md  retrospective.md  write-learnings.md
src/captain_hook/: __init__.py  cli.py  config.py  event_mapping.py  events.py  frontmatter.py  generator.py  hook_manager.py  installer.py  interactive.py  prompt_scanner.py  rich_menu.py  scanner.py  sync.py  templates.py  types.py
src/hawk_hooks/: __init__.py  cli.py  config.py  download_service.py  downloader.py  event_mapping.py  events.py  frontmatter.py  generator.py  hook_meta.py  installer.py  interactive.py  managed_config.py  mcp_handler.py  (+17 more)
tests/: __init__.py  conftest.py  test_adapter_antigravity.py  test_adapter_base.py  test_adapter_claude.py  test_adapter_codex.py  test_adapter_cursor.py  test_adapter_gemini.py  test_adapter_mixins.py  test_adapter_opencode.py  test_cli.py  test_cli_main.py  test_config.py  test_config_destinations.py  test_dashboard.py  test_dashboard_handlers.py  test_download_service.py  test_downloader.py  test_event_mapping.py  test_frontmatter.py  test_hook_meta.py  test_integration.py  test_integration_prompts.py  test_managed_config.py  test_mcp_handler.py  test_migrate_prompts.py  test_migration.py  test_package_service.py  test_prompt_scanner.py  test_registry.py  test_resolver.py  test_scope_resolution.py  test_sync.py  test_theme.py  test_toggle_groups.py  test_toggle_view.py  test_types.py  test_v2_cli.py  test_v2_config.py  test_v2_dashboard.py  (+9 more)
(+83 files in other folders)
