[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captain-hook"
version = "0.2.0"
description = "A modular Claude Code hooks manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "bembu" }
]
keywords = ["claude", "hooks", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
captain-hook = "captain_hook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/captain_hook"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
